# ledger-app-algorand

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  demo.py  sha512_256.py  sign.py
app/: .gitignore  Makefile  Makefile.version
cli/: algomsgpack.py  sign.py
docs/: APDUSPEC.md
fuzz/: parser_parse.cpp
js/: .gitignore  README.md  package.json
src/: algo_addr.c  algo_addr.h  algo_asa.c  algo_asa.h  algo_keys.c  algo_keys.h  algo_tx.c  algo_tx.h  algo_tx_dec.c  algo_ui.h  apdu_protocol_defines.h  base32.c  base32.h  base64.h  command_handler.c  command_handler.h  glyphs.c  glyphs.h  main.c  main.h  msgpack.h  sha512_256.c  sha512_256.h  str.c  str.h  ui_idle.c  (+15 more)
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  generate-corpus.patch  parser_impl.cpp  printing_bytes.cpp  pytest.ini  requirements.txt  testcases.json  ui_tests.cpp
tests/fuzzing-corpus/: 1  10  100  101  102  103  105  106  107  108  109  114  117  118  119  120  121  123  125  126  127  128  129  131  132  133  135  136  137  139  140  141  143  144  145  146  147  148  149  151  (+228 more)
tests/include/: cx.h  os.h
tests/src/: cx.c  fuzz_tx.c  test_str.c
tests/test/: __init__.py  conftest.py  dongle.py  speculos.py  test_get_public_key.py  test_sign_msgpack.py  test_sign_msgpack_assets.py  test_sign_msgpack_keyreg.py  test_sign_msgpack_payment.py  test_sign_msgpack_teal.py  txn_utils.py  ui_interaction.py
tests/test_utils/: get_public_key.py  sign_msgpack_asset.py  sign_msgpack_keyreg.py  sign_msgpack_payment.py  sign_msgpack_teal.py
tests/utils/: common.cpp  common.h
(+44 files in other folders)
